more cache files for EN_ES for google; improved WordListProcessor - better meanings, added example sentences; add Google synonyms